syntax = "proto3";

import "Areas/Game/Protos/Group/models.proto";

option csharp_namespace = "MVC_FrontEnd.Areas.Game.Protos.Group";

package group;




////////////////////////////////////
//			 RPC ACTIONS		  //
////////////////////////////////////

message GroupListByGameIdRequest{
	int32 id = 1;
}
message GroupListByGameIdResponse{
	repeated GroupSimpleProto groups = 1;
}
