syntax = "proto3";

import "Areas/Game/Protos/Group/actions.proto";

option csharp_namespace = "MVC_FrontEnd.Areas.Game.Protos.Group";

package group;



////////////////////////////////////
//			  SERVICES			  //
////////////////////////////////////

 service GameToGroup {
	rpc GetGroupListByGameId (GroupListByGameIdRequest) returns (GroupListByGameIdResponse);
 }